changed unit tests