@@ -1,6 +1,5 @@
 package com.example.timesaver.service;
 
-import com.example.timesaver.model.Applicant;
 import com.example.timesaver.model.Team;
 import com.example.timesaver.model.dto.applicants.display.*;
 import com.example.timesaver.model.dto.application.TeammateDTO;
@@ -24,29 +23,25 @@ import static org.mockito.Mockito.when;
 @ExtendWith(MockitoExtension.class)
 public class ApplicantsDisplayServiceTest {
 
-    @Mock
-    private TeamRepository teamRepository;
-    @Mock
-    private ApplicantRepository applicantRepository;
-    @Mock
-    private QuestionRepository questionRepository;
-    @Mock
-    private QuestionAnswerRepository questionAnswerRepository;
+    @Mock private TeamRepository teamRepository;
+    @Mock private ApplicantRepository applicantRepository;
+    @Mock private QuestionRepository questionRepository;
+    @Mock private QuestionAnswerRepository questionAnswerRepository;
 
     @InjectMocks
     private ApplicantsDisplayService applicantsDisplayService;
 
     @Test
     public void testGetTeams() {
-        Long projectId = 1L;
+        Integer projectId = 1;
         Team team = new Team();
-        team.setTeamId(10L);
+        team.setTeamId(10);
         team.setTeamName("Team A");
-        
+
         when(teamRepository.findAllTeamsByProject(projectId)).thenReturn(List.of(team));
         when(applicantRepository.getSingleApplicantsFirstAndLastName(projectId))
                 .thenReturn(List.of(new TeammateDTO("John", "Doe")));
-        when(applicantRepository.getFirstAndLastNameByTeam(projectId, 10L))
+        when(applicantRepository.getFirstAndLastNameByTeam(projectId, 10))
                 .thenReturn(List.of(new TeammateDTO("Alice", "Smith")));
 
         GetTeamsDTO result = applicantsDisplayService.getTeams(projectId);
@@ -59,7 +54,7 @@ public class ApplicantsDisplayServiceTest {
 
     @Test
     public void testGetTeamsEmpty() {
-        Long projectId = 1L;
+        Integer projectId = 1;
         when(teamRepository.findAllTeamsByProject(projectId)).thenReturn(Collections.emptyList());
         when(applicantRepository.getSingleApplicantsFirstAndLastName(projectId)).thenReturn(Collections.emptyList());
 
@@ -71,29 +66,21 @@ public class ApplicantsDisplayServiceTest {
 
     @Test
     public void testGetParticipants() {
-        Long projectId = 1L;
+        Integer projectId = 1;
         QuestionDTO qDto = new QuestionDTO(1, "Question?");
         when(questionRepository.findQuestionByProjectId(projectId)).thenReturn(List.of(qDto));
 
-        GetParticipantsHelperDTO a1 = new GetParticipantsHelperDTO();
-        a1.setApplicantId(100L);
-        a1.setFirstName("John");
-        a1.setLastName("Doe");
-        a1.setTeamName("Team A");
-        a1.setIsSelected(true);
+        // getApplicantsWithTeam returns GetParticipantsHelperDTO
+        GetParticipantsHelperDTO h1 = new GetParticipantsHelperDTO(100, "John", "Doe", "Team A", true);
+        GetParticipantsHelperDTO h2 = new GetParticipantsHelperDTO(101, "Jane", "Smith", null, false);
 
-        GetParticipantsHelperDTO a2 = new GetParticipantsHelperDTO();
-        a2.setApplicantId(101L);
-        a2.setFirstName("Jane");
-        a2.setLastName("Smith");
-        a2.setIsSelected(false);
+        when(applicantRepository.getApplicantsWithTeam(projectId)).thenReturn(List.of(h1));
+        when(applicantRepository.getApplicantsWithNoTeam(projectId)).thenReturn(List.of(h2));
 
-        when(applicantRepository.getApplicantsWithTeam(projectId)).thenReturn(List.of(a1));
-        when(applicantRepository.getApplicantsWithNoTeam(projectId)).thenReturn(List.of(a2));
-
-        QuestionAnswerDTO qa1 = new QuestionAnswerDTO(1, "Answer 1");
-        when(questionAnswerRepository.findQuestionNumberAndAnswerByApplicantId(100L)).thenReturn(List.of(qa1));
-        when(questionAnswerRepository.findQuestionNumberAndAnswerByApplicantId(101L)).thenReturn(Collections.emptyList());
+        com.example.timesaver.model.dto.applicants.display.QuestionAnswerDTO qa1 =
+                new com.example.timesaver.model.dto.applicants.display.QuestionAnswerDTO(1, "Answer 1");
+        when(questionAnswerRepository.findQuestionNumberAndAnswerByApplicantId(100)).thenReturn(List.of(qa1));
+        when(questionAnswerRepository.findQuestionNumberAndAnswerByApplicantId(101)).thenReturn(Collections.emptyList());
 
         GetParticipantsDTO result = applicantsDisplayService.getParticipants(projectId);
 
@@ -108,14 +95,14 @@ public class ApplicantsDisplayServiceTest {
     @Test
     @DisplayName("Should handle team with no members (filter out)")
     void testGetTeamsWithEmptyMemberTeam() {
-        Long projectId = 1L;
+        Integer projectId = 1;
         Team team = new Team();
-        team.setTeamId(10L);
+        team.setTeamId(10);
         team.setTeamName("Empty Team");
-        
+
         when(teamRepository.findAllTeamsByProject(projectId)).thenReturn(List.of(team));
         when(applicantRepository.getSingleApplicantsFirstAndLastName(projectId)).thenReturn(Collections.emptyList());
-        when(applicantRepository.getFirstAndLastNameByTeam(projectId, 10L)).thenReturn(Collections.emptyList());
+        when(applicantRepository.getFirstAndLastNameByTeam(projectId, 10)).thenReturn(Collections.emptyList());
 
         GetTeamsDTO result = applicantsDisplayService.getTeams(projectId);
 
